Fix [ - ] collapse swimlane z-index
part of: story #14151 Update the assigned-to semantic of a card

The button should be displayed over the parent card.
However, the current component tree does not allow to make it sticky
vertically.

Hence it does not scroll with the parent card.

--- a/plugins/taskboard/themes/includes/_body.scss
+++ b/plugins/taskboard/themes/includes/_body.scss
@@ -106,7 +106,7 @@
 
 .taskboard-swimlane-toggle {
     position: absolute;
-    z-index: 2;
+    z-index: 10;
     top: 5px;
     left: 6px;
     transition: opacity ease-in-out 100ms;
